# netlens

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  geoip_enrich.py  index_structure.txt  pyproject.toml  requirements-geoip.txt  test.json
backend/app/: main.py
backend/app/api/routes/: auth.py  health.py  integrations.py  ip_intelligence.py  netbox.py  opensearch.py
backend/app/auth/: dependencies.py  jwks.py
backend/app/cache/: redis_cache.py
backend/app/core/: config.py
backend/app/integrations/geoip/: __init__.py  asn_enricher.py
backend/app/integrations/netbox/: mac_vendor.py  service.py
backend/app/integrations/opensearch/: export.py  pdf_report.py  service.py
backend/app/ip_intelligence/: schemas.py  service.py
backend/app/scanner/: arp_cache.py  net_dataset.json  pipeline.py  scheduler.py  service.py
backend/app/utils/: timezone.py
backend/netlens_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scanner_output/: snapshot_20260607_1449.json  snapshot_20260607_1503.json
backend/tests/: test_health.py  test_integrations.py  test_ip_summary.py  test_mac_vendor.py  test_netbox_inventory.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ActivityEventList.tsx  CounterpartyList.tsx  DeviceDetailPanel.tsx  DeviceRow.tsx  ErrorBoundary.tsx  InterfaceList.tsx  InventoryCommandBar.tsx  (+4 more)
scripts/: README.md  create-db.sql
(+4 files in other folders)
